# ggml-tcl

./: CMakeLists.txt  pkgIndex.tcl.in  readme.md
examples/: example-gguf.tcl  example-grad.tcl  example-grad0.tcl  example-opt.tcl  example.tcl
src/: cgraph.c  cgraph.h  common.c  common.h  context.c  context.h  library.c  library.h  opt.c  opt.h  tensor.c  tensor.h
